Fixed unnecessary scrollbar

--- a/assets/styles/main/log.sass
+++ b/assets/styles/main/log.sass
@@ -15,7 +15,6 @@ pre#log
   word-wrap: break-word
   background-color: $color-bg-log
   border: 1px solid $color-border-log
-  overflow-x: scroll
   counter-reset: line-numbering
 
   .cut
